# vst2413

./: .gitattributes  .gitignore  LICENSE  README.md  emu2413.c  emu2413.h  index.html  params.json
SimpleSynth.xcodeproj/: project.pbxproj
mac/: Info.plist  vst2413p-Info.plist  vst2413r-Info.plist  vst2413s-Info.plist  xcode_vst_prefix.h
source/: CMakeLists.txt  RhythmDriver.cpp  RhythmDriver.h  SimpleSynth.cpp  SimpleSynth.h  SimpleSynthProc.cpp  SynthDriver.cpp  SynthDriver.h  Vst2413p.cpp  Vst2413p.h  Vst2413r.cpp  Vst2413r.h  Vst2413s.cpp  Vst2413s.h  driver.cpp  driver.h  emu2413.c  emu2413.h  vst2413.cpp  vst2413.h  vst2413Proc.cpp
source/emu2413/: 2413tone.h  281btone.h  emu2413.c  emu2413.h  readme.txt  vrc7tone.h
vst2413.xcodeproj/: project.pbxproj
windows/: vst2413.sln  vst2413.vcproj  vst2413.vcxproj  vst2413p.vcxproj  vst2413r.vcxproj  vst2413s.vcxproj
